// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemFiles renders with delivery  1`] = `
<div
  className="ItemFiles"
>
  <Row>
    <Col>
      <h3>
        <FrameTitle
          iconId="polkadot_check_asset"
          text="List of Collection Item's file(s)"
        />
      </h3>
    </Col>
  </Row>
  <Table
    columns={
      Array [
        Object {
          "align": "left",
          "header": "Name",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Type",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Size (bytes)",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Source",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Hash",
          "render": [Function],
          "width": "250px",
        },
        Object {
          "detailsExpanded": [Function],
          "header": "# of claim(s)",
          "hideExpand": [Function],
          "render": [Function],
          "renderDetails": [Function],
          "width": "150px",
        },
      ]
    }
    data={
      Array [
        Object {
          "contentType": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                253,
                130,
                79,
                206,
                221,
                36,
                94,
                85,
                135,
                28,
                116,
                203,
                72,
                235,
                186,
                208,
                45,
                171,
                155,
                196,
                185,
                55,
                4,
                51,
                182,
                9,
                214,
                2,
                46,
                206,
                122,
                115,
              ],
            },
            "value": "image/jpeg",
          },
          "detailsExpanded": false,
          "hash": "0xa025ca5f086f3b6df1ca96c235c4daff57083bbd4c9320a3013e787849f9fffa",
          "name": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                105,
                240,
                34,
                65,
                181,
                174,
                188,
                124,
                98,
                254,
                118,
                238,
                179,
                201,
                86,
                11,
                183,
                83,
                56,
                66,
                25,
                164,
                243,
                15,
                45,
                85,
                96,
                65,
                225,
                76,
                180,
              ],
            },
            "value": "programming_music.jpg",
          },
          "size": 90718n,
          "uploaded": true,
        },
      ]
    }
    renderEmpty={[Function]}
    rowStyle={[Function]}
  />
</div>
`;

exports[`ItemFiles renders with empty deliveries 1`] = `
<div
  className="ItemFiles"
>
  <Row>
    <Col>
      <h3>
        <FrameTitle
          iconId="polkadot_check_asset"
          text="List of Collection Item's file(s)"
        />
      </h3>
    </Col>
  </Row>
  <Table
    columns={
      Array [
        Object {
          "align": "left",
          "header": "Name",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Type",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Size (bytes)",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Source",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Hash",
          "render": [Function],
          "width": "250px",
        },
        Object {
          "detailsExpanded": [Function],
          "header": "# of claim(s)",
          "hideExpand": [Function],
          "render": [Function],
          "renderDetails": [Function],
          "width": "150px",
        },
      ]
    }
    data={
      Array [
        Object {
          "contentType": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                253,
                130,
                79,
                206,
                221,
                36,
                94,
                85,
                135,
                28,
                116,
                203,
                72,
                235,
                186,
                208,
                45,
                171,
                155,
                196,
                185,
                55,
                4,
                51,
                182,
                9,
                214,
                2,
                46,
                206,
                122,
                115,
              ],
            },
            "value": "image/jpeg",
          },
          "detailsExpanded": false,
          "hash": "0xa025ca5f086f3b6df1ca96c235c4daff57083bbd4c9320a3013e787849f9fffa",
          "name": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                105,
                240,
                34,
                65,
                181,
                174,
                188,
                124,
                98,
                254,
                118,
                238,
                179,
                201,
                86,
                11,
                183,
                83,
                56,
                66,
                25,
                164,
                243,
                15,
                45,
                85,
                96,
                65,
                225,
                76,
                180,
              ],
            },
            "value": "programming_music.jpg",
          },
          "size": 90718n,
          "uploaded": true,
        },
      ]
    }
    renderEmpty={[Function]}
    rowStyle={[Function]}
  />
</div>
`;

exports[`ItemFiles renders with undefined deliveries 1`] = `
<div
  className="ItemFiles"
>
  <Row>
    <Col>
      <h3>
        <FrameTitle
          iconId="polkadot_check_asset"
          text="List of Collection Item's file(s)"
        />
      </h3>
    </Col>
  </Row>
  <Table
    columns={
      Array [
        Object {
          "align": "left",
          "header": "Name",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Type",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Size (bytes)",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Source",
          "render": [Function],
        },
        Object {
          "align": "left",
          "header": "Hash",
          "render": [Function],
          "width": "250px",
        },
        Object {
          "detailsExpanded": [Function],
          "header": "# of claim(s)",
          "hideExpand": [Function],
          "render": [Function],
          "renderDetails": undefined,
          "width": "150px",
        },
      ]
    }
    data={
      Array [
        Object {
          "contentType": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                253,
                130,
                79,
                206,
                221,
                36,
                94,
                85,
                135,
                28,
                116,
                203,
                72,
                235,
                186,
                208,
                45,
                171,
                155,
                196,
                185,
                55,
                4,
                51,
                182,
                9,
                214,
                2,
                46,
                206,
                122,
                115,
              ],
            },
            "value": "image/jpeg",
          },
          "detailsExpanded": false,
          "hash": "0xa025ca5f086f3b6df1ca96c235c4daff57083bbd4c9320a3013e787849f9fffa",
          "name": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                105,
                240,
                34,
                65,
                181,
                174,
                188,
                124,
                98,
                254,
                118,
                238,
                179,
                201,
                86,
                11,
                183,
                83,
                56,
                66,
                25,
                164,
                243,
                15,
                45,
                85,
                96,
                65,
                225,
                76,
                180,
              ],
            },
            "value": "programming_music.jpg",
          },
          "size": 90718n,
          "uploaded": true,
        },
      ]
    }
    renderEmpty={[Function]}
    rowStyle={[Function]}
  />
</div>
`;
